--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,4 @@
 .section{
-    padding: 2rem;
     position: relative;
     z-index: 99;
     opacity: 100;
@@ -9,36 +8,53 @@
     left: 0;
     transition: all 300ms ease;
     background-color: #F8F7F1;
+    width: 100%;
+    padding: 2rem;
+    
 }
 .container{
+    position: fixed;
+    padding: 2rem;
     position: relative;
     display: flex;
     justify-content: space-between;
 
 }
 .logo{
-    font-size: 18px;
+    margin-top: 2px;
+    font-size: 20px;
     font-weight: 550;
     pointer-events: none;
 }
-ul{
+.bigScreen{
     display: flex;
     gap: 2rem;
     padding-right: 2rem;
 }
-ul li{
+.bigScreen li{
     list-style: none;
 }
-ul li a:hover, .num p:hover{
-    color: #000;
+.bigScreen li a:hover, .num p:hover{
+   color: orange;
     
 }
-ul li a{
+.bigScreen li a{
     text-decoration: none;
   color: #74726c;
     font-weight: 600;
     transition:  all 300ms ease;
     cursor: pointer; 
+}
+.response{
+    display:none;
+    top: 4rem; 
+    padding: 0rem;
+    width: 50%;
+    right: 0;
+    background-color: #F8F7F1;
+}
+.menuIcon{
+    display: none;
 }
 .num{
     display: flex;
@@ -53,24 +69,55 @@ ul li a{
     border-radius: 999px;
 }
 @media screen and (max-width:980px){
-    ul{
-       display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 6.7rem;
-    padding: 2rem;
-    
-    right: 0;
-    background-color: #f3f2ed;
+    .menuIcon{
+        display: block;
     }
-    ul li {
-        
+    .response{
+        display: block;
+      width: 40%;
+    position: absolute;
+    top: 5rem;
+    padding: 2rem;
+    right: 0px;
+    background-color: #F8F7F1;
+    }
+    .logo{
+        font-size: 15px;
+    }
+    .response li {
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 2rem;
         width: 100%;
         
+    }
+    
+    .response li a{
+        text-decoration: none;
+        color: #74726c;
+        font-weight: 600;
+        transition:  all 300ms ease;
+        cursor: pointer; 
        
     }
-    ul li:hover{
-        padding-bottom: .5rem;
-        border-bottom: 2px solid #979692;
+    .response li a:hover{
+        padding-left: 1rem;
+        color: orange;
+    }
+    .bigScreen{
+        display: none;
+    }
+    .response li{
+        list-style: none;
+    }
+    .icons{
+        padding: .5rem;
+        background-color: white;
+        border-radius: 999px;
+        margin-bottom: -8px;
+
+    }
+    .section{
+        padding: 0;
     }
 }
