--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -85,22 +85,31 @@
     left: 4.5rem;
     color: orange;
 }
-@media screen and (max-width:480px) {
+@media screen and (max-width:980px) {
   .upperElement{
     justify-content: center;
     flex-direction:column;
     gap: 2rem;
      }
+     .experience{
+      gap: .5rem;
+    }
      .primaryText{
       font-size: 2.5rem;
      }
+     .secondaryText{
+      font-size: 15px;
+     }
      .lowerElement{
+      flex-direction: column;
       margin-top: 4rem;
-      gap: 2rem;
+      gap: 4rem;
+      align-items: center;
       justify-content: center;
      }
      .certificate img{
-      width: 2.3rem;
+      width: 2rem;
+      margin-bottom: 1rem;
      }
      .person{
       position: relative;
@@ -115,8 +124,7 @@
       position: relative;
                 display: none;
      }
-     primaryText {
-      font-size: 2.5rem;
-    
-  }
+     .certificate span{
+      font-size: 18px;
+    }
 }
