--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -35,8 +35,6 @@
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
     gap: 3.8rem;
-    width: 100%;
-    margin-bottom: 5rem;
     
 }
 
@@ -55,34 +53,37 @@
 
 .portfolio-box img{
     width: 100%;
+    height: 300px;
     transition: .5s ease;
 }
 .portfolio-box:hover img{
      transform: scale(1.1);
     }
-.portfolio-box:hover .portfolio-layer {
+.portfolio-box .portfolio-layer {
     position: absolute;
     bottom: 0;
     left: 0;
     display: flex;
+    width: 100%;
+    height:300px;
     background: linear-gradient(rgba(0, 0, 0, .1), rgb(236, 229, 190));
     justify-content: center;
     align-items: center;
     flex-direction: column;
     text-align: center;
-    padding: 0 2rem;
+    padding-left: -2rem;
     transform: translateY(100%);
     transition: .5s ease;
 }
-.portfolio-layer{
+.portfolio-box:hover .portfolio-layer{
     transform: translateY(0);
 }
-.portfolio-layer h4{
+.portfolio-box .portfolio-layer h4{
     font-size: 1.5rem;
 }
 .portfolio-layer p{
     font-size: .8rem;
-    margin: .2rem 0 1rem;
+     
 }
 .portfolio-layer a{
     display: inline-flex;
