--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -69,11 +69,11 @@
             flex-direction: column;
             gap: 2rem;
 }
- .stats{
+ .stats{ display: flex;
                 justify-content: flex-start;
                 gap: 4rem;
  }
-  .stat{
+  .stat{display: flex;
                     justify-content: flex-start;
                     flex-direction: column;
                 }
@@ -110,10 +110,9 @@
     gap: 4rem;
 }
 .stat{
-        justify-content: flex-start;
         flex-direction: column;
     }
     .secondaryTextsss{
-        font-size: 1.2rem;
+        font-size: 1rem;
     }
 }
