--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,6 +9,7 @@
     transition: all 300ms ease;
     background-color: #F8F7F1;
     width: 100%;
+    height: 50px;
     padding: 2rem;
     
 }
@@ -32,6 +33,7 @@
     padding-right: 2rem;
 }
 .bigScreen li{
+    margin-top: -15px;
     list-style: none;
 }
 .bigScreen li a:hover, .num p:hover{
@@ -44,6 +46,14 @@
     font-weight: 600;
     transition:  all 300ms ease;
     cursor: pointer; 
+}
+.icons{
+    padding: .5rem;
+    background-color: white;
+    border-radius: 999px;
+    margin-bottom: -8px;
+    box-shadow: 0px .4rem 1rem #74726c;
+
 }
 .response{
     display:none;
