--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -66,7 +66,7 @@
     display: flex;
     width: 100%;
     height:300px;
-    background: linear-gradient(rgba(0, 0, 0, .1), rgb(236, 229, 190));
+    background: linear-gradient(rgba(243, 219, 5, 0.1), rgb(247, 132, 2));
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -79,10 +79,12 @@
     transform: translateY(0);
 }
 .portfolio-box .portfolio-layer h4{
-    font-size: 1.5rem;
+    font-size: 1.8rem;
+    margin-bottom: 2px;
 }
 .portfolio-layer p{
     font-size: .8rem;
+    font-weight: 600;
      
 }
 .portfolio-layer a{
@@ -91,13 +93,15 @@
     align-items: center;
     width: 3rem;
     height: 3rem;
-    background: var(--text-color);
+    background: white;
     border-radius: 50%;
+    text-decoration: none;
 
 }
 .portfolio-layer a i{
+    text-decoration: none;
     font-size: 1.2rem;
-    color: var(--second-bg-color);
+    color: #000;
 }
 
 @media screen and (max-width:480px){
