--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,6 +1,6 @@
 .primaryText {
     
-    font-size: 3rem;
+    font-size: 3.2rem;
     font-weight: bold;
   }
   .secondaryText {
@@ -10,27 +10,33 @@
     font-weight: 500;
     padding-top: 8px;
   }
-  .secondaryTexts{
+  .el{
     line-height: 50px;
-    font-size: 1.3rem;
-    font-weight: 500;
+    font-size: 1.4rem;
+    font-weight: 600;
     padding-top: 8px;
+    width: 30%;
+    margin-left: 14rem;
   }
   .social-media a{
     text-decoration: none;
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: .5rem;
-    height: .5rem;
-    margin: 1rem;
-    padding: 1rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    margin: .5rem;
+    padding: .5rem;
     background: orange;
     border-radius: 50%;
     font-size: .4rem; 
     /* color: orange; */
     transition: all .5s ease;
     box-shadow: 0 .4rem 1.8rem gray;
+}
+.social-media a:hover{
+  cursor: pointer;
+  background: rgb(243, 181, 66);
 }
 .social-media a i{
     font-size: 2rem;
@@ -109,7 +115,11 @@
       gap: .5rem;
     }
      .primaryText{
-      font-size: 2.5rem;
+      font-size: 2.6rem;
+     }
+     .el{
+      width: 100%;
+      margin-left: 0;
      }
      .secondaryText{
       font-size: 15px;
@@ -121,8 +131,12 @@
       align-items: center;
       justify-content: center;
      }
+     .social-media a{
+      width: 1rem;
+      height: 1rem;
+     }
      .social-media a i{
-      font-size: 1.5rem;
+      font-size: 1rem;
   }
      
      .certificate img{
